<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>com.davidkoudela.crucible</groupId>
    <artifactId>crucible-project-admin-restapi</artifactId>
    <version>4.9</version>

    <organization>
        <name>David Koudela</name>
    </organization>

    <name>Crucible Project Admin REST API</name>
    <description>This is the Crucible Project Admin RestAPI plugin for Atlassian FishEye/Crucible.</description>
    <packaging>atlassian-plugin</packaging>

    <dependencies>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <version>2.4</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.atlassian.fisheye</groupId>
            <artifactId>atlassian-fisheye-api</artifactId>
            <version>${fecru.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.atlassian.crucible</groupId>
            <artifactId>atlassian-crucible-scmutils</artifactId>
            <version>${fecru.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.atlassian.fisheye</groupId>
            <artifactId>fisheye-jar</artifactId>
            <version>${fecru.version}</version>
            <scope>provided</scope>
            <exclusions>
                <exclusion>
                    <groupId>com.atlassian.fisheye</groupId>
                    <artifactId>atlassian-fisheye-api</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.google.guava</groupId>
                    <artifactId>guava</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.atlassian.sal</groupId>
            <artifactId>sal-api</artifactId>
            <version>2.10.20</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.6.6</version>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <version>1.2.16</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-beans</artifactId>
            <version>3.1.4.RELEASE</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.2.2-atlassian-1</version>
        </dependency>
        <dependency>
            <groupId>com.atlassian.plugins.rest</groupId>
            <artifactId>atlassian-rest-common</artifactId>
            <version>2.9.7</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty.orbit</groupId>
            <artifactId>javax.servlet.jsp</artifactId>
            <version>2.2.0.v201112011158</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.xmlbeans</groupId>
            <artifactId>xmlbeans</artifactId>
            <version>2.3.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.atlassian.extras</groupId>
            <artifactId>atlassian-extras-common</artifactId>
            <version>2.5</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.atlassian.profiling</groupId>
            <artifactId>atlassian-profiling</artifactId>
            <version>1.8</version>
        </dependency>
        <dependency>
            <groupId>com.cenqua.shaj</groupId>
            <artifactId>shaj</artifactId>
            <version>0.5</version>
        </dependency>
        <!-- UNIT TESTING DEPENDENCIES START -->
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.10</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <version>1.9.0</version>
            <scope>test</scope>
        </dependency>
        <!-- UNIT TESTING DEPENDENCIES END -->
        <!-- INTEGRATION TESTING WITH Selenium DEPENDENCIES START -->
        <dependency>
            <groupId>com.atlassian.selenium</groupId>
            <artifactId>atlassian-selenium-browsers-auto</artifactId>
            <version>2.3-m01</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.atlassian.selenium</groupId>
            <artifactId>atlassian-selenium</artifactId>
            <version>2.3-m01</version>
            <scope>test</scope>
        </dependency>
        <!-- INTEGRATION TESTING WITH Selenium DEPENDENCIES END -->
        <!-- JaCoCo instrumentation DEPENDENCIES START -->
        <dependency>
            <groupId>org.jacoco</groupId>
            <artifactId>org.jacoco.agent</artifactId>
            <classifier>runtime</classifier>
            <version>${jacoco.version}</version>
            <scope>test</scope>
        </dependency>
        <!-- JaCoCo DEPENDENCIES END -->
        <!-- WIRED TEST RUNNER DEPENDENCIES START -->
        <dependency>
            <groupId>com.atlassian.plugins</groupId>
            <artifactId>atlassian-plugins-osgi-testrunner</artifactId>
            <version>${plugin.testrunner.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>javax.ws.rs</groupId>
            <artifactId>jsr311-api</artifactId>
            <version>1.1.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.atlassian.upm</groupId>
            <artifactId>upm-api</artifactId>
            <version>2.1.4</version>
            <scope>test</scope>
        </dependency>
        <!-- WIRED TEST RUNNER DEPENDENCIES END -->
        <!-- IntelliJ IDEA compile DEPENDENCIES START -->
        <!-- Uncomment when IntelliJ IDEA has to be used. It causes Java Beans load failures for atlas-* cmds -->
        <!--dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>27.0.1-jre</version>
        </dependency>
        <dependency>
            <artifactId>atlassian-annotations</artifactId>
            <groupId>com.atlassian.annotations</groupId>
            <version>1.1.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.codehaus.jackson</groupId>
            <artifactId>jackson-core-asl</artifactId>
            <version>1.9.13-atlassian-3</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.codehaus.jackson</groupId>
            <artifactId>jackson-mapper-asl</artifactId>
            <version>1.9.13-atlassian-3</version>
        </dependency>
        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>4.1.7.RELEASE</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.sun.jersey</groupId>
            <artifactId>jersey-server</artifactId>
            <version>1.8-atlassian-14</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.atlassian.crowd</groupId>
            <artifactId>embedded-crowd-api</artifactId>
            <version>2.9.5-7fb674b</version>
            <scope>provided</scope>
        </dependency-->
        <!-- IntelliJ IDEA compile DEPENDENCIES END -->
        <!-- IntelliJ IDEA UNIT TESTING DEPENDENCIES START -->
        <!-- Uncomment when IntelliJ IDEA has to be used. It causes Java Beans load failures for atlas-* cmds -->
        <!--dependency>
            <groupId>it.unimi.dsi</groupId>
            <artifactId>fastutil</artifactId>
            <version>6.1.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.7</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-core</artifactId>
            <version>3.3.0-atlassian-1</version>
            <scope>test</scope>
        </dependency-->
        <!-- IntelliJ IDEA UNIT TESTING DEPENDENCIES END -->
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>com.atlassian.maven.plugins</groupId>
                <artifactId>maven-fecru-plugin</artifactId>
                <version>${amps.version}</version>
                <extensions>true</extensions>
                <configuration>
                    <instanceId>fecru</instanceId>
                    <productVersion>${fecru.version}</productVersion>
                    <productDataVersion>${fecru.data.version}</productDataVersion>
                    <jvmArgs>-Xms1g -Xmx2g -XX:MaxPermSize=1g -XX:-UseGCOverheadLimit -server</jvmArgs>
                    <testGroups>
                        <testGroup>
                            <id>unit-tests</id>
                            <productIds>
                                <productId>fecru</productId>
                            </productIds>
                            <excludes>
                                <exclude>it/**/*Test.java</exclude>
                                <exclude>it/**/*TestCase.java</exclude>
                            </excludes>
                        </testGroup>
                        <testGroup>
                            <id>integration-tests</id>
                            <productIds>
                                <productId>fecru</productId>
                            </productIds>
                            <includes>
                                <include>it/**/*Test.java</include>
                                <include>it/**/*TestCase.java</include>
                            </includes>
                        </testGroup>
                    </testGroups>
                    <systemPropertyVariables>
                        <jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.2</version>
                <configuration>
                    <source>1.6</source>
                    <target>1.6</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <id>default-instrument</id>
                        <goals>
                            <goal>instrument</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-restore-instrumented-classes</id>
                        <phase>test</phase>
                        <goals>
                            <goal>restore-instrumented-classes</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-prepare-agent-integration</id>
                        <goals>
                            <goal>prepare-agent-integration</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>default-report</id>
                        <phase>package</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <includes>
                                <include>**/com/davidkoudela/crucible/**</include>
                            </includes>
                        </configuration>
                    </execution>
                    <execution>
                        <id>default-report-integration</id>
                        <phase>integration-test</phase>
                        <goals>
                            <goal>report-integration</goal>
                        </goals>
                        <configuration>
                            <includes>
                                <include>**/com/davidkoudela/crucible/**</include>
                            </includes>
                        </configuration>
                    </execution>
                    <execution>
                        <id>default-check</id>
                        <goals>
                            <goal>check</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <rule>
                                    <element>BUNDLE</element>
                                    <limits>
                                        <limit>
                                            <counter>COMPLEXITY</counter>
                                            <value>COVEREDRATIO</value>
                                            <minimum>0.60</minimum>
                                        </limit>
                                    </limits>
                                </rule>
                                <rule>
                                    <element>CLASS</element>
                                    <excludes>
                                        <exclude>*Test</exclude>
                                    </excludes>
                                    <limits>
                                        <limit>
                                            <counter>LINE</counter>
                                            <value>COVEREDRATIO</value>
                                            <minimum>0.80</minimum>
                                        </limit>
                                    </limits>
                                </rule>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <properties>
        <fecru.version>4.7.0-20190214100246</fecru.version>
        <fecru.data.version>4.7.0-20190214100246</fecru.data.version>
        <!--fecru.version>4.6.1-20181008080545</fecru.version>
        <fecru.data.version>4.6.1-20181008080545</fecru.data.version-->
        <!--fecru.version>4.5.2-20180123112923</fecru.version>
        <fecru.data.version>4.5.2-20180123112923</fecru.data.version-->
        <!--fecru.version>4.5.0-20170908094439</fecru.version>
        <fecru.data.version>4.5.0-20170908094439</fecru.data.version-->
        <!--fecru.version>4.4.2-20170803091957</fecru.version>
        <fecru.data.version>4.4.2-20170803091957</fecru.data.version-->
        <!--fecru.version>4.3.0-20170119092650</fecru.version>
        <fecru.data.version>4.3.0-20170119092650</fecru.data.version-->
        <!--fecru.version>4.2.0-20160928073034</fecru.version>
        <fecru.data.version>4.2.0-20160928073034</fecru.data.version-->
        <!--fecru.version>4.1.1-20160708100607</fecru.version>
        <fecru.data.version>4.1.1-20160708100607</fecru.data.version-->
        <!--fecru.version>4.1.0-20160624111830</fecru.version>
        <fecru.data.version>4.1.0-20160624111830</fecru.data.version-->
        <!--fecru.version>4.0.3-20160323115009</fecru.version>
        <fecru.data.version>4.0.3-20160323115009</fecru.data.version-->
        <!--fecru.version>3.10.1-20151028191103</fecru.version>
        <fecru.data.version>3.10.1-20151028191103</fecru.data.version-->
        <!--fecru.version>3.9.0-20150804094455</fecru.version>
        <fecru.data.version>3.9.0-20150804094455</fecru.data.version-->
        <!--amps.version>5.0.13</amps.version-->

        <amps.version>6.2.3</amps.version>
        <!--amps.version>5.1.18</amps.version-->
        <plugin.testrunner.version>1.2.0</plugin.testrunner.version>
        <jacoco.version>0.7.5.201505241946</jacoco.version>
    </properties>

</project>
